<resources>
    <string name="app_name">Smart Pantry Manager</string>
    <string name="manage_pantry_items">Manage Pantry Items</string>
    <string name="view_pantry_items">View Pantry Items</string>
    <string name="recipe_collection">Recipe Collection</string>
    <string name="menuHome"> Home</string>>
    <string name="menu_managePantryItems"> Manage Pantry Items</string>
    <string name="menu_viewPantryItems"> View Pantry Items</string>
    <string name="add_ingredients_btn"> ADD NEW INGREDIENTS</string>
    <string name="del_ingredients_btn"> DELETE INGREDIENTS</string>
    <string name="update_ingredients_btn"> UPDATE INGREDIENTS </string>
    <string name="headerTxtAdd">ADD INGREDIENT</string>
    <string name="headerTxtUpdate">UPDATE INGREDIENT</string>
    <string name="headerTextPantryItems">PANTRY ITEMS</string>
    <string name="enter_ingredient_name">Enter ingredient name</string>
    <string name="updateItemHeaderTxt">Select Pantry Item To Update</string>
    <string name="deleteItemHeaderTxt">Press and Hold Pantry Item To Delete</string>
    <string name="deleteItemBtnText">Delete</string>
    <string name="editItemBtnText">Edit</string>
    <string name="headerTextAddRecipe">ADD RECIPE</string>
    <string name="labelRecipeName">Recipe Name</string>
    <string name="hintRecipeNameED">Enter recipe name</string>
    <string name="labelRecipeInstructions">Recipe Instructions</string>
    <string name="hintRecipeInstructionsED">Enter recipe instruction</string>
    <string name="textSaveBtn">ADD RECIPE INGREDIENTS</string>
    <string name="textSaveRecipeBtn">SAVE RECIPE</string>
    <string name="headerTextRecipeIngredient">Select/Add Recipe Ingredients</string>
    <string name="headerTextRecipeCollection">Recipe Collection</string>
    <string name="addRecipeBtnTxt">ADD RECIPE</string>
    <string name="suggestedRecipeBtnText">SUGGESTED</string>
    <string name="viewAllRecipeBtnTxt">VIEW ALL</string>
    <string name="feedbackTxtRecipeCollection">No recipes found</string>
    <string name="lvTextRecipeName">Recipe name</string>
    <string name="viewRecipeBtnText">View Details</string>
</resources>