<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity">

    <TextView
        android:id="@+id/addUpdateRecipeHeaderTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/headerTextAddRecipe"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/addUpdateRecipeHeaderTxt"
        app:layout_constraintBottom_toTopOf="@id/nextActivityBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/recipeNameLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/labelRecipeName"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/recipeNameED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintRecipeNameED"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#BCB8B8"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/recipeInstructionsLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/labelRecipeInstructions"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/recipeInstructionsED"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:gravity="start|top"
                android:hint="@string/hintRecipeInstructionsED"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/nextActivityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#2196F3"
        android:foregroundTint="#FFFFFF"
        android:text="@string/textSaveBtn"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
