<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagePantryItems">

    <Button
        android:id="@+id/addIngredientsBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:layout_weight="1"
        android:background="#03A9F4"
        android:text="@string/add_ingredients_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateIngredientsBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_weight="1"
        android:background="#FFEB3B"
        android:text="@string/update_ingredients_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addIngredientsBtn" />

    <Button
        android:id="@+id/delIngredientsBtn"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:background="#FF0000"
        android:text="@string/del_ingredients_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateIngredientsBtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_managePantryItems"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0B0B0B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addIngredientsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>