<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFEFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/app_name"
        android:textColor="#0BFF13"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manageItemsBtn"
        style="@android:style/Widget.Button"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:background="@color/teal_200"
        android:text="@string/manage_pantry_items"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <Button
        android:id="@+id/viewPantryItemsBtn"
        style="@android:style/Widget.Button"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:background="#E91E63"
        android:backgroundTint="@null"
        android:text="@string/view_pantry_items"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageItemsBtn"
        app:layout_constraintVertical_bias="0.192" />

    <Button
        android:id="@+id/recipeCollectionBtn"
        style="@android:style/Widget.Button"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:background="#4CAF50"
        android:text="@string/recipe_collection"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPantryItemsBtn"
        app:layout_constraintVertical_bias="0.465" />

</androidx.constraintlayout.widget.ConstraintLayout>