<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeIngredientsActivity">

    <TextView
        android:id="@+id/headerTextRecipeIngredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/headerTextRecipeIngredient"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/ingredientsListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:dividerHeight="8dp"
        app:layout_constraintTop_toBottomOf="@id/headerTextRecipeIngredients"
        app:layout_constraintBottom_toTopOf="@id/addNewIngredientBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addNewIngredientBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/add_ingredients_btn"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/saveRecipeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveRecipeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSaveRecipeBtn"
        android:backgroundTint="#2196F3"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
